doc/v1.4.2/_sources/contrib/print_proxy.rst.txt
.. _contrib-print_proxy:

Print Proxy
-----------






Sub themes
----------

To enable separate pages per sub theme, enable the option `split_sub_themes` in the `print` section of your
configuration.


.. code-block:: yaml

    print:
        split_sub_themes: true


You can influence the sort order for each theme separately. Per default, the sub themes are unsorted.

Example for alphabetic sort:

.. code-block:: yaml

    - name: plr119
      sub_themes:
        sorter:
            module: pyramid_oereb.contrib.print_proxy.sub_themes.sorting
            class_name: AlphabeticSort


The list sort provides a fix, non-alphabetic order. A ordered list as parameter defines the order. The sub theme names
have to match exactly, otherwise they will be added at the end. Example configuration:

.. code-block:: yaml

    - name: plr119
      sub_themes:
        sorter:
            module: pyramid_oereb.contrib.print_proxy.sub_themes.sorting
            class_name: ListSort
            params:
                list:
                    - First sub theme
                    - Another sub theme
                    - Last sub theme
